--- a/client/src/Components/Search/Search.css
+++ b/client/src/Components/Search/Search.css
@@ -1,18 +1,25 @@
-.button-Search{
-    position: absolute;
-    top: 40px;
-    left: 90%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
+.search-Class {     
+   width: 45vw;
+    
+}
+
+.form-search{       
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.button-Search {
     background-color: gainsboro;
-    color:black;
+    color: black;
     font-size: 26px;
     font-family: "Lucida Console", "Courier New", monospace;
     letter-spacing: 10px;
-    padding: 10px 80px;
-    border-color: rgba(166,158,112,255);
-   border-width: 2px;
-   border-style: solid;
+    padding: 8px 60px;
+    border-color: rgba(166, 158, 112, 255);
+    border-width: 2px;
+    border-style: solid;
     cursor: pointer;
     border-radius: 5px;
     text-align: center;
@@ -23,20 +30,15 @@
     color: white;
 }
 
-.error-search{
-    position: absolute;
-    top:50px;
-    left: 68%;
-    color:red;
+.error-search { 
+    color: red;
 }
 
-.input-Search{
-    position: absolute;
-    top:22px;
-    left:61%;
+.input-Search {
     font-size: 26px;
-    padding: 5px 30px;
-    border-color: rgba(166,158,112,255);
+    padding: 8px 30px;
+    border-radius: 5px;
+    border-color: rgba(166, 158, 112, 255);
     border-width: 2px;
     border-style: solid;
     font-family: "Lucida Console", "Courier New", monospace;
