--- a/client/src/Components/Navbar/NavBar.css
+++ b/client/src/Components/Navbar/NavBar.css
@@ -1,75 +1,52 @@
 .nav-Class {
     background-color: whitesmoke;
     height: 90px;
-    position: fixed;
     top: 0;
     width: 100%;
-}
-
-.div-List {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;    
 
 }
 
-.ul-List {
-    list-style: none;
-    display: inline-flex;
+.div-List{    
+  width: 45vw;
+}
+
+.ul-List {     
+    list-style: none;   
+    display: flex; 
+    justify-content: space-between;   
+    align-items: center;     
     font-family: "Lucida Console", "Courier New", monospace;
     font-size: 26px;
     letter-spacing: 10px;
+}
+a:link{
+    text-decoration: none;
+}
+a:visited{
     text-decoration: none;
 }
 
-.li-Home {
-    position: absolute;
-    top: 40px;
-    left: 10%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
+.ul-List li {    
     background-color: gainsboro;
     color: black;
     font-size: 26px;
     font-family: "Lucida Console", "Courier New", monospace;
     letter-spacing: 10px;
-    padding: 10px 80px;
+    padding: 8px 60px;
     border-color: rgba(166, 158, 112, 255);
     border-width: 2px;
     border-style: solid;
-
     cursor: pointer;
     border-radius: 5px;
     text-align: center;
 }
 
-.li-Home:hover {
+.ul-List li:hover {
     background-color: black;
     color: white;
 }
 
-.li-Create {
-    position: absolute;
-    top: 40px;
-    left: 35%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: gainsboro;
-    color: black;
-    font-size: 26px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    letter-spacing: 10px;
-    padding: 10px 80px;
-    border-color: rgba(166,158,112,255);
-    border-width: 2px;
-    border-style: solid;
-    cursor: pointer;
-    border-radius: 5px;
-    text-align: center;
-}
 
-.li-Create:hover {
-    background-color: black;
-    color: white;
-}
