--- a/client/src/Components/Search/PokemonByName.css
+++ b/client/src/Components/Search/PokemonByName.css
@@ -1,17 +1,14 @@
 .div-card-Search {
-    margin-top: 300px;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
-    margin-left: 40%;    
 }
 
-.div-card-Search .card-searched{
-   width: 500px;
-   height: 500px;
-}
-
-.div-card-Search .card-searched:hover{
-    -webkit-transform:scale(1.3);
-    transform:scale(1.3);  
+.div-card-Search .card-searched:hover {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
 }
 
 .card-search-link {
